# SSS-Browser-patches

./: LICENSE  README.md  apply.bash  build.bash  fan.patch  gn.args
keystores/: eunchul.jks
patches/: .branding.patch.swp  .doh.patch.swp  branding.patch  doh.patch  http-header-framentation.patch  interstitial-ad.patch  keystore.patch  sni-fragmentation.patch  tcp-udp-fragmentation.patch  win-tcp-fragmentation.diff
patches/bromite/: Add-a-flag-for-DNS-over-HTTPS.patch  Disable-Omaha-update-checks.patch  first_run-deactivate-autoupdate-globally.patch  safe_browsing-disable-reporting-of-safebrowsing-override.patch  updater-disable-updater-pings.patch
src/chrome/app/theme/chromium/: BRANDING
src/chrome/app/theme/chromium/linux/: product_logo_32.xpm
src/chrome/app/theme/chromium/mac/: app.icns
src/meerkat/android/: BUILD.gn
src/meerkat/android/java/: .AndroidManifest.xml.swp  AndroidManifest.xml
src/meerkat/android/java/res/values/: attrs.xml  blocked_sites.xml
src/meerkat/android/java/src/com/back.meerkat/ads/: .Interstitial.java.swp  AdapterImpl.java  Ads.java  Banner.java  Interstitial.java
src/meerkat/android/java/src/com/meerkatbrowser/ad/: Ad.java  AdSize.java  AppLovinAdapter.java  Banner.java  BannerActivity.java  BannerLayout.java  BlockChecker.java  FacebookAdapter.java  Listener.java
src/meerkat/android/java/src/com/meerkatbrowser/ad/adapter/: Adapter.java  Admob.java  AdmobAdapter.java  AppLovin.java  Facebook.java  Vungle.java
